C端加上相关注释